tests/corpus/typescript/object_literal/invalid_computed_property_name.txt
Returns an error when computed property is not valid
=======
{ [{}]: string }
=======
{[{}]: string}
=======
[E0002] Error: Syntax error
   ╭─[ <stdin>:1:4 ]
   │
 1 │ { [{}]: string }
   │    ─┬
   │     ╰── A computed property key may only be a well known symbol.
   │
   │ Help: See https://www.typescriptlang.org/docs/handbook/symbols.html#well-known-symbols
───╯
